--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "easyqrcodejs": "^4.4.10",
     "firebase": "^9.4.0",
+    "html5-qrcode": "^2.1.6",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
